# study-buddy-ai

./: .gitignore  Jenkinsfile  pyproject.toml  resume.tex  resumekaran.tex  setup.py
.github/: copilot-instructions.md
manifests/: deployment.yaml
results/: quiz_results_20250913_005547.csv
src/config/: settings.py
src/generator/: question_generator.py
src/llm/: groq_client.py
src/models/: questions_schema.py
