[project]
name = "study-buddy-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.7",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "setuptools>=80.9.0",
    "streamlit>=1.49.1",
]
